New version and login

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,8 @@
-OPENAI_API_KEY=YOUR_API_KEY_HERE
-DATABASE_URL=YOUR_DATABASE_URL_HERE
+OPENAI_API_KEY=YOUKEY
+FIREBASE_API_KEY=YOUKEY
+FIREBASE_AUTH_DOMAIN=YOUKEY
+FIREBASE_PROJECT_ID=YOUKEY
+FIREBASE_STORAGE_BUCKET=YOUKEY
+FIREBASE_MESSAGING_SENDER_ID=YOUKEY
+FIREBASE_APP_ID=YOUKEY
+
