--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
-OPENAI_API_KEY=YOUKEY
-FIREBASE_API_KEY=YOUKEY
-FIREBASE_AUTH_DOMAIN=YOUKEY
-FIREBASE_PROJECT_ID=YOUKEY
-FIREBASE_STORAGE_BUCKET=YOUKEY
-FIREBASE_MESSAGING_SENDER_ID=YOUKEY
-FIREBASE_APP_ID=YOUKEY
+OPENAI_API_KEY=key
+FIREBASE_API_KEY=key
+FIREBASE_AUTH_DOMAIN=key
+FIREBASE_PROJECT_ID=key
+FIREBASE_STORAGE_BUCKET=key
+FIREBASE_MESSAGING_SENDER_ID=key
+FIREBASE_APP_ID=Key
+
 
